# repeater

./: .dockerignore  Makefile  docker-compose.yml  package-lock.json
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 041cdc37eca9_add_reviews_table.py  2a48a462bb2c_.py  3c3ecf913f05_make_email_nullable.py  54730108eeb4_add_timezone_true.py  56dd6c609bb7_add_is_paused_to_deck.py  65ee1145b661_add_token_version_to_user.py  a7e545f74db4_make_password_hash_nullable_and_add_.py  b75469aa6007_add_is_archived_to_deck.py  b89566c6becc_initial_revision.py  beef753ab424_make_reviews_card_id_nullable.py  cde8d9c509c0_add_cards_table.py  edcb0f37ea88_add_category_table.py  ef1d4910dcf5_update_review_table_remove_relation_to_.py  faf952b8dd72_add_decks_table.py
backend/data/: chinese.json  deck.json  french.json
backend/scripts/: entrypoint.sh  extract-openapi.py
backend/src/: const.py  exceptions.py  log.py  main.py  util.py
backend/src/api/: admin.py  auth.py  cards.py  categories.py  decks.py  healthcheck.py  me.py  oauth.py  reviews.py  statistics.py
backend/src/auth/: jwt.py  oauth.py
backend/src/db/: __init__.py  bootstrap.py  models.py
backend/src/import_export/: __init__.py  custom.py
backend/src/pagination/: __init__.py
backend/src/schedulers/: __init__.py  basic.py
backend/src/schemas/: card.py  category.py  deck.py  pagination.py  review.py  statistics.py  user.py
backend/src/statistics/: __init__.py
backend/tests/: asserts.py  conftest.py  test_auth.py  test_decks.py  test_oauth.py
docs/: openapi.yaml
(+150 files in other folders)
